fix: - Ajustes na chamada para atualizar produto - Ajustes nos domínios para não dá erro no JsonProperty com Accessor - Criação de testes unitários